# LampSmartOpen

./: .env  .gitmodules  CMakeLists.txt  README.md  lampctrl.sh  main.c
